feat: add recommend freelancer to project